Add endPoint for get all recipes.
